@@ -12,7 +12,7 @@
 
       <div class="row">
         <div class="cell column-8 position-0"
-             tal:content="context/text">
+             tal:content="structure context/get_text">
         </div>
         <div class="cell column-4 position-8">
           <h5>Timings</h5>
